--- a/src/Components/Market_card/Market_card.css
+++ b/src/Components/Market_card/Market_card.css
@@ -1,5 +1,5 @@
 .M-card{
-    width: 20rem;
+    width: 18rem;
 background-color: rgb(46, 46, 67);
 height: 100%!important;
 
@@ -11,6 +11,7 @@ height: 100%!important;
 }
 .M-card-border{
     border-radius:2pc;
+    padding: 10px !important;
     
 }
 
@@ -28,7 +29,8 @@ height: 100%!important;
 }
 .img-circle {
     position: absolute;
-    left: 16pc;
+    /* left: 30px; */
+    right: -30px;
     top: 24px;
 }
 .plus{
@@ -59,7 +61,7 @@ height: 100%!important;
     background-image: linear-gradient(19deg,#9cd6e1,#d2b4da);
     padding: 11px 11px 5px;
     border-radius: 50%;
-    width: 16%;
+    width: 21%;
     height: 3pc;
     position: relative;
     top: -9px;
@@ -80,6 +82,7 @@ height: 100%!important;
 .card-flex{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
+   padding-left: 8px;
 }
 .heading-brower{
     font-size: 5pc;
@@ -94,8 +97,8 @@ height: 100%!important;
         font-size: 2pc;
     }
      .M-border{
-       width: 17rem;
-       left: 14px;
+        width: 17rem;
+    
     
     }
     .img-circle {
@@ -145,4 +148,12 @@ height: 100%!important;
         
         width: 100% !important;
     }
+}
+
+
+
+@media only screen and (max-width:600px){
+.essssss{
+    border: none !important;
+}
 }
