--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,6 +13,7 @@
     font-size: 16px;
 }
 
+
 .footer_input_here{
     background:white !important;
     height: 50px;
@@ -115,7 +116,7 @@
    text-decoration: none;
    color: #666;
    text-align: left;
-   font-size: 19px;
+   font-size: 16px;
    font-weight: 530;
 }
 
@@ -126,4 +127,25 @@
 .footer_list{
     list-style: none !important;
     text-align: left;
+}
+
+
+
+@media only screen and (max-width:600px) {
+    
+
+
+
+    .footer_btn_here{
+        margin: 10px 0px;
+    }
+    .foooter_main_respo{
+        display: flex !important;
+        flex-direction: column !important;
+    
+    }
+    .footer_input_here{
+        width: 100% !important;
+    }
+   
 }
