--- a/src/Components/Top_seller/Top_seller.css
+++ b/src/Components/Top_seller/Top_seller.css
@@ -76,6 +76,7 @@
 
 @media only screen and (max-width:600px){
     .Top_seller_main_heading{
-        font-size: 31px !important;
+        font-size: 22px !important;
+        margin-top: 10px !important;
     }
 }
