--- a/src/Components/Collection/Collection.css
+++ b/src/Components/Collection/Collection.css
@@ -8,8 +8,8 @@
 }
 
 
-.colecction_paddddding{
-    padding: 100px 0px;
+.collection_main_bg_py{
+    padding: 100px 0px 50px 0px;
 }
 @media only screen and (max-width: 400px){
 
