--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,6 +1,6 @@
 .banner-area {
     background-color: #0a1831;
-    padding: 99px 0 70px;
+    /* padding: 100px 0 70px; */
     /* position: relative; */
     z-index: 1;
     overflow: hidden;
