--- a/src/Components/Maeket_main/Market_main.css
+++ b/src/Components/Maeket_main/Market_main.css
@@ -1,3 +1,6 @@
 .paadddddddd{
     padding-top: 120px !important;
 }
+.inner-bg10 {
+    background-image: url("https://gible-nft.hibootstrap.com/_next/static/media/inner-banner8.28ec972ba965593254f48009c55f6093.jpg");
+}
