--- a/src/Components/Collection_card/Collection_card.css
+++ b/src/Components/Collection_card/Collection_card.css
@@ -1,21 +1,71 @@
-.card-2-coll{
+.card-2-coll {
     width: 18rem;
     border-radius: 22px;
-    background-image: linear-gradient(90deg,#152a45,#1f3f65,#152a45);
+    background-image: linear-gradient(90deg, #152a45, #1f3f65, #152a45);
 }
-.overflow-hidden{
+
+.overflow-hidden {
     border-radius: 22px;
 }
-@media only screen  and (max-width: 450px){
-.card-2-coll{
-    width: 18rem;
-    border-radius: 22px;
-    background-image: linear-gradient(90deg,#152a45,#1f3f65,#152a45);
+
+@media only screen and (max-width: 450px) {
+    .card-2-coll {
+        width: 18rem;
+        border-radius: 22px;
+        background-image: linear-gradient(90deg, #152a45, #1f3f65, #152a45);
+    }
 }
-}
-@media only screen and (min-width: 350px) and (max-width: 450px){
-    .card-2-coll{
+
+@media only screen and (min-width: 350px) and (max-width: 450px) {
+    .card-2-coll {
         width: 18rem;
         position: relative;
         left: 21px;
-    }}
+    }
+}
+
+.featured-card {
+    margin-bottom: 30px;
+    background-color: #fff;
+    border-radius: 15px;
+    /* -webkit-transition: var(--transition); */
+    transition: 50%;
+}
+
+.featured-card .featured-card-img {
+    position: relative;
+    z-index: 1;
+}
+.featured-card .featured-card-img a {
+    display: block;
+}
+a, a:focus, a:hover {
+    text-decoration: none;
+}
+.featured-card .featured-card-img a img {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    max-width: 100%;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px){
+.featured-card .featured-card-img p {
+    padding: 8px 18px 6px;
+    font-size: 14px;
+}
+}
+
+
+.featured-card .featured-card-img p {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: inline-block;
+    padding: 8px 22px 6px;
+    font-size: 16px;
+    color: #666;
+    background-color: #e5e5e5;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    margin-bottom: 0;
+   
+}
