--- a/src/Components/Collection_next/Collection_next.css
+++ b/src/Components/Collection_next/Collection_next.css
@@ -68,3 +68,63 @@
   border-bottom: 3px solid ;
   border-color:rgba(8, 153, 141, 0.67);
 }
+
+.inner-bg12 {
+    background-image: url('https://gible-nft.hibootstrap.com/_next/static/media/inner-banner12.ac8031e8030ced2d04ca74820458198e.jpg');
+}
+
+.main_two_btn{
+    display: flex;
+}
+
+.default-btn2 {
+    padding: 20px 50px 10px;
+    text-align: center;
+    color: white!important;
+    font-size: var(--fontSize);
+    font-weight: 600;
+    transition: var(--transition);
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    border-radius: 0px;
+    z-index: 0;
+    /* background: #f14d5d; */
+    overflow: hidden;
+    white-space: nowrap;
+    border: 0;
+    
+}
+.default-btn3 {
+    padding: 20px 50px 10px;
+    text-align: center;
+    color: white!important;
+    font-size: var(--fontSize);
+    font-weight: 600;
+    transition: var(--transition);
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    border-radius: 0px;
+    z-index: 0;
+     background-color: #14233d;;
+    overflow: hidden;
+    white-space: nowrap;
+    border: 0;
+}
+
+.default-btn3:hover{
+    background-color: #f14d5d;;
+
+}
+
+.item-details-img img{
+    width: 100%;
+    height: 40rem;
+}
+.images img{
+    width: 4rem;
+    height: 4rem;
+}
