--- a/src/Components/Create_pro/Create_pro.css
+++ b/src/Components/Create_pro/Create_pro.css
@@ -1,117 +1,3 @@
-.create_pro{
-    padding: 90px 0px;
+.inner-bg13 {
+    background-image: url('https://gible-nft.hibootstrap.com/_next/static/media/inner-banner13.109788d71ab868cfc6000b9f8370667e.jpg');
 }
-
-
-.create_pro_heading{
-    font-family: Gotham-Font-Navbar;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 1.2;
-    margin-bottom: 0.5;
-}
-
-
-.create_pro_para{
-    font-size: 1rem;
-    font-weight: 600;
-}
-
-.hr_pro{
-    color:black;
-    height: 5px;
-    font-size: 25px !important;
-}
-
-
-.feature_heading{
-    font-size: 18px ;
-    font-weight: 600;
-}
-
-.feature_para{
-    margin-top: 1rem !important;
-    font-size: 14px;
-}
-
-.upload_img{
-    cursor: pointer;
-    border: thin dashed;
-    color: grey;
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    border-radius: 25px;
-    border-radius: 12px;
-    -webkit-filter: drop-shadow(0 0 2.5px rgba(19,19,19,.16));
-    filter: drop-shadow(0 0 2.5px rgba(19,19,19,.16));
-    background-image: radial-gradient(circle at center,#1f4169 0,#0f2135 100%);
-}
-
-
-.input_lebals{
-
-    font-size: 20px;
-    color: black !important;
-    font-weight: 600;
-    margin-bottom: 10px !important;
-}
-.Create_input
-  {  /* background: 0 0; */
-    border: none;
-    color: #fff !important;
-    height: 40px;
-    padding-left: 10px;
-    font-size: 17px;
-    letter-spacing: 0;
-    line-height: 33px;
-
-    font-family: mulish;
-    width: 100% !important;
-    /* width: inherit; */
-    box-shadow: inset 0 0 10px grey;
-    /* -moz-box-shadow: inset 0 0 10px grey; */
-    /* -webkit-box-shadow: inset 0 0 10px grey; */
-    border-radius: 10px;
-    background-color: #041426;
-}
-
-
-
-    .Create_text_area{
-        border-radius: 10px;
-        background-color: #041426;
-       
-    box-shadow: inset 0 0 10px grey;
-    border: none;
-    caret-color: #fff;
-    /* height: 40px; */
-    padding-left: 10px;
-    font-size: 17px;
-    letter-spacing: 0;
-    line-height: 33px;
-    color: #fff;
-    font-family: mulish;
-    width: 100% !important;
-    }
-
-    .create_btn_s{
-        filter: drop-shadow(1.338px 1.486px 0.5px rgba(19,19,19,.17));
-        background-image: linear-gradient(90deg,#17e9d9,#4fa3e1 50%,#875fe9);
-        border: none;
-        color: #fff;
-        display: inline-block;
-        padding: 10px 20px;
-        border-radius: 25px;
-        font-weight: 600;
-    }
-
-
-
-    @media only screen and (max-width:600px){
-        .create_pro{
-            padding: 130px 0px !important;
-        }
-    }
-
-
