--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -119,3 +119,136 @@
         margin-bottom: 20px !important;
     }
 }
+
+
+.Avtar_Header{
+    background-color: transparent !important;
+    border: none !important;
+    display: flex !important;
+    align-items: center;
+}
+.Avtar_Header i{
+    color: #f14d5d;
+}
+.others-options .navbar-nav .nav-item .dropdown-menu {
+    -webkit-box-shadow: 0 0 15px 0 rgb(0 0 0 / 10%);
+    box-shadow: 0 0 15px 0 rgb(0 0 0 / 10%);
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    background: var(--whiteColor);
+    border: none;
+    border-top: 2px solid var(--pinkColor);
+    position: absolute;
+    visibility: hidden;
+    -webkit-transform-origin: bottom;
+    transform-origin: bottom;
+    border-radius: 5px;
+    display: block;
+    width: 207px !important;
+    z-index: 99;
+    opacity: 0;
+    top: 80px;
+    left: -120px !important;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transition: var(--transition);
+    transition: var(--transition);
+    padding: 2px 5px 0;
+}
+.optional-item-list{
+    display: flex;
+    align-items: center;
+}
+
+.others-options .optional-item-list .dropdown-menu li a {
+    font-size: 15px;
+    color: var(--whiteColor);
+    position: relative;
+    -webkit-transition: var(--transition);
+    transition: var(--transition);
+    padding: 12px 20px 10px;
+    background-color: #fff;
+    border-radius: 15px;
+}
+.dropdown-menu li a:hover{
+background-color: #fff !important;
+}
+.Link_style{
+    text-decoration: none !important;
+}
+
+@media screen and (max-width:769px) {
+    .nav_large{
+        display: none !important;
+    }
+}
+
+@media (min-width:770px) and (max-width:5000px) {
+
+    .nav_small{
+        display: none !important;
+    } 
+}
+
+.navbar-dark .navbar-toggler {
+    color: rgba(255, 255, 255, .55);
+    border-color: rgba(255, 255, 255, .1);
+    background-color: red !important;
+    color: rgb(219, 27, 27);
+}
+
+.others-options{
+    display: flex !important;
+}
+
+.mobile-responsive-nav{
+    background-color: #14233d;
+}
+
+@media only screen and (max-width: 767px){
+.navbar-area .navbar .navbar-nav {
+    height: auto !important;
+    overflow-y: scroll;
+    position: absolute;
+    background: #fff;
+    width: 100%;
+    left: 0;
+    top: 10px;
+    right: 0;
+    margin: 0 auto;
+    z-index: 999;
+}
+}
+
+@media only screen and (max-width: 991px){
+.mobile-nav {
+    display: none !important;
+}
+.mobile-responsive-nav .others-options {
+    display: block !important;
+}
+.others-options{
+    display: flex !important;
+    flex-direction: column !important;
+}
+.log_navbar{
+    width: 15rem;
+}
+}
+
+
+
+@media only screen and (max-width: 767px){
+.navbar-area .navbar .navbar-nav .nav-item a {
+    padding-left: 30px;
+    color: #f14d5d !important;
+}
+
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px){
+.mobile-nav {
+    top: 28px;
+    right: 55px;
+    display: none !important;
+}
+}
