--- a/src/Components/Market_place2/Market_place2.css
+++ b/src/Components/Market_place2/Market_place2.css
@@ -80,3 +80,104 @@ font-size: 19px;
         overflow-x: scroll;
          }
 }
+
+.item-left{
+    display: flex;
+    align-items: center;
+}
+.item-details-in-content2{
+    padding: 25px 30px 22px;
+    background-color: #e5e5e5 !important;
+   
+    border-radius: 15px !important;
+    margin-bottom: 20px
+   
+}
+
+.preview-box2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.css-i4bv87-MuiSvgIcon-root {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    width: 2em;
+    height: 2em !important;
+    display: inline-block;
+    fill: currentColor;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    font-size: 1.5rem;
+    color: #f14d5d;
+}
+
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root:before {
+    position: absolute;
+    left: 0;
+    /* top: -1px; */
+    right: 0;
+    height: 1px;
+    content: "";
+    opacity: 1;
+    display: none !important;
+    /* background-color: rgba(0, 0, 0, 0.12); */
+    -webkit-transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+.text_color{
+    color: #f14d5d;
+    font-size: 18px !important;
+
+}
+
+
+@media screen  and (max-width:600px){
+    .item-details-in-content {
+        padding: 25px 30px 22px;
+        background-color: #e5e5e5;
+        display: flex;
+        flex-direction: column !important;
+        align-items: center;
+        justify-content: center;
+        border-radius: 15px;
+        margin-bottom: 20px;
+    }
+  .item-details-in-content  .item-right{
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: center !important;
+
+        width: 100%;
+    }
+    .item-details-in-content  .item-left{
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: center !important;
+    
+        width: 100%;
+    }
+    .text_color{
+        color: #f14d5d;
+        font-size: 15px !important;
+    
+    }
+    .item-details-in-content2 {
+        padding: 20px 10px 18px !important;
+        background-color: #e5e5e5 !important;
+        border-radius: 15px !important;
+        margin-bottom: 20px;
+    }
+    .detail-M p{
+        font-size: 14px !important;
+    }
+    .downtext p{
+        font-size: 14px !important;
+
+    }
+}
