--- a/src/Components/Top_seller/Top_seller.css
+++ b/src/Components/Top_seller/Top_seller.css
@@ -3,6 +3,10 @@
 }
 
 
+.inner-bg102 {
+    background-image: url('https://gible-nft.hibootstrap.com/_next/static/media/inner-banner10.983c6a869c864ead4bff82efefa45d85.jpg');
+}
+
 .top_seller_main_bg{
     padding: 70px 0px;
 }
