--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -128,7 +128,9 @@
     list-style: none !important;
     text-align: left;
 }
-
+.footer-logo{
+    margin-left: -2rem;
+}
 
 
 @media only screen and (max-width:600px) {
