--- a/src/Components/Collection_next/Collection_next.css
+++ b/src/Components/Collection_next/Collection_next.css
@@ -128,3 +128,13 @@
     width: 4rem;
     height: 4rem;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
