--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,6 +1,6 @@
 .banner-area {
     background-color: #0a1831;
-    padding: 200px 0 0px 0;
+    /* padding: 200px 0 0px 0; */
     /* position: relative; */
     z-index: 1;
     overflow: hidden;
