--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -259,3 +259,215 @@ background-color: #fff !important;
     padding-bottom: 10px !important;
 }
 }
+
+.WalletConnect1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+.WalletConnect{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+
+    margin-left: -3rem;
+}
+.WalletConnect h5{
+    margin-left: 1rem;
+}
+.card{
+    /* box-shadow: 1px 1px 1px 3px #e5e5e5; */
+    border: 1px solid rgb(229, 232, 235);
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 72px;
+    margin-top: 24px;
+}
+.ilahZE {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(229, 232, 235);
+    border-radius: 10px;
+    margin: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom: none;
+    padding-left: 0px;
+    list-style-type: none;
+}
+.ilahZE li {
+    border-bottom: 1px solid rgb(229, 232, 235);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    list-style-type: none;
+    width: 100%;
+       
+}
+.ilahZE > :first-child > a:first-of-type {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.ilahZE .sc-a8df1259-0 {
+    border: none;
+    overflow: hidden;
+}
+.Text_section{
+    color: rgb(53, 56, 64);
+
+}
+.egqDTp {
+    width: 100%;
+    font-weight: 600;
+    border: 1px solid rgb(229, 232, 235);
+    color: rgb(53, 56, 64);
+    text-align: left;
+    text-decoration: none;
+    display: flex;
+    padding: 16px;
+}
+/* 
+.fcwFWy {
+    align-self: center;
+    order: 2;
+    margin-right: 16px;
+    flex-shrink: 0;
+}
+.eEreIg {
+    overflow: hidden;
+}
+.cmjqwQ {
+    -webkit-box-align: center;
+    align-items: center;
+}
+.fYgjHJ {
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+.kKyBpy {
+    flex-direction: column;
+    display: flex;
+    width: 24px;
+    height: 24px;
+
+
+}
+
+.kqDcHr {
+    height: 24px;
+    width: 24px;
+} */
+.dNyhhk {
+    align-self: stretch;
+    flex: 1 1 auto;
+    flex-flow: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    order: 3;
+    overflow: hidden;
+    font-size: 16px;
+    align-items: flex-start;
+}
+.bSNQjW {
+    align-self: stretch;
+    flex: 0 0 auto;
+    flex-flow: column;
+    order: 4;
+    text-align: right;
+}
+.cLGxCH {
+    max-width: 40%;
+    overflow: hidden;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+.fQDfDu {
+    font-weight: 400;
+    font-size: 14px;
+    color: rgb(112, 122, 131);
+}
+.brdhhA {
+    line-height: 24px;
+}
+.hunypc {
+    background-color: rgb(32, 129, 226);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 4px 8px;
+}
+
+.ilahZE li{
+
+}
+
+
+.ilahZE li {
+	position: relative;
+	display: inline-block;
+	width: 100%;
+	height: auto;
+	/* margin: 40px 15px; */
+	/* padding: 20px 0; */
+	text-align: center;
+	background-color: #fff;
+	border-radius: 5px;
+	-webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+	transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+	cursor: pointer;
+}
+
+.ilahZE li::after {
+	content: "";
+	border-radius: 5px;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 95%;
+    margin-left:0.5rem;
+	height: 100%;
+	box-shadow:  0 15px 20px rgba(0, 0, 0, 0.1);
+	opacity: 0;
+	-webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+	transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);;
+}
+.connect_Dropdon{
+	box-shadow:  25px 15px 15px 25px rgba(0, 0, 0, 0.1);
+
+}
+.ilahZE li:hover {
+ -webkit-transform: scale(1.05, 1.05);
+	 transform: scale(1.05, 1.05);
+}
+
+.ilahZE li:hover::after {
+	opacity: 1;
+}
+
+:where(.css-dev-only-do-not-override-1s3dcof).ant-drawer-right>.ant-drawer-content-wrapper {
+    top: 100px !important;
+    right: 0;
+    bottom: 0;
+    box-shadow: -6px 0 16px 0 rgb(0 0 0 / 8%), -3px 0 6px -4px rgb(0 0 0 / 12%), -9px 0 28px 8px rgb(0 0 0 / 5%);
+}
+.jSPhMX {
+    display: flex;
+}
+.bMZyxz1 {
+    width: 24px;
+    height: 24px;
+}
+.bBUaNU1 {
+    padding: 16px;
+}
+.egqDTp{
+    display: flex;
+    align-items: center;
+}
+.hCOPIW {
+    text-rendering: optimizelegibility;
+    color: rgb(52, 199, 123);
+    font-feature-settings: "liga" !important;
+    font-size: 18px !important;
+}
