--- a/public/96b37438d38568123102.css
+++ b/public/96b37438d38568123102.css
@@ -22250,8 +22250,8 @@ img {
 }
 
 .box-shadow {
-    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, .06);
-    box-shadow: 0 0 15px rgba(0, 0, 0, .06)
+    -webkit-box-shadow: 0 0 15px #f14d5d !important;
+    box-shadow: 0 0 15px #f14d5d !important
 }
 
 .default-btn {
@@ -26366,15 +26366,15 @@ img {
 
 .featured-card .featured-card-img p {
     position: absolute;
-    top: 20px;
+    top: 10px !important;
     right: 20px;
     display: inline-block;
-    padding: 8px 22px 6px;
+    padding: 5px 10px 5px !important;
     font-size: 16px;
     color: var(--bodyColor);
-    background-color: #e5e5e5;
+   background-color: rgba(159, 159, 159, 0.4);
     border: 1px solid var(--whiteColor);
-    border-radius: 15px;
+    border-radius: 10px;
     margin-bottom: 0;
     -webkit-transition: var(--transition);
     transition: var(--transition)
