--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -471,3 +471,21 @@ background-color: #fff !important;
     font-feature-settings: "liga" !important;
     font-size: 18px !important;
 }
+.navbar-area.is-sticky, .navbar-area.is-sticky .desktop-nav-one {
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10 !important;
+    position: fixed;
+    animation: fadeInDown .5s ease-in-out 0s 1 normal none running;
+}
+
+
+.desktop-nav .navbar .navbar-nav .nav-item:hover .dropdown-menu {
+    top: 100%;
+    opacity: 1;
+    margin-top: 0;
+    visibility: visible;
+    transform: scaleY(1);
+    margin-left: -3rem !important;
+}
