--- a/src/Components/User_profile/User_Profile.css
+++ b/src/Components/User_profile/User_Profile.css
@@ -15,3 +15,21 @@
     justify-content: center;
     align-items: center;
 }
+.copy_Icon{
+    color:#f14d5d ;
+    margin-top: -0.5rem;
+    margin-left: 0.5rem;
+    font-size: 1.5rem;
+}
+
+@media only screen and (max-width:600px) {
+    .show_large{
+        display: none;
+    }
+}
+
+@media (min-width:600px) and (max-width:6000px) {
+    .show_small{
+        display: none;
+    }
+}
